--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '../base.html.twig' %}
 
 {% block header_title %}<h1>Modifier <strong>{{ user.username }}</strong></h1>{% endblock %}
 {% block header_img %}{% endblock %}
