--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -1,10 +1,10 @@
-{% extends '../base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
     <div class="row">
         {{ form_start(form, {'action' : path('task_create')}) }}
             {{ form_widget(form) }}
-
+{#            {{ form_row(form.author) }}#}
             <button type="submit" class="btn btn-success pull-right">Ajouter</button>
         {{ form_end(form) }}
 
