--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -1,10 +1,10 @@
-{% extends '../base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_content.jpg') }}" alt="todo list">{% endblock %}
 
 {% block body %}
-    <a href="{{ path('task_create') }}" class="btn btn-info pull-right">Créer une tâche</a>
-    <div class="row">
+    <a href="{{ path('task_create') }}" class="btn btn-info pull-right" >Créer une tâche</a><br>
+    <div class="row" style="margin-top: 20px">
         {% for task in tasks %}
         <div class="col-sm-4 col-lg-4 col-md-4">
             <div class="thumbnail">
