--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -1,4 +1,4 @@
-{% extends '../base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block header_title %}<h1>Créer un utilisateur</h1>{% endblock %}
 {% block header_img %}{% endblock %}
