--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -17,6 +17,7 @@
                     <th>#</th>
                     <th>Nom d'utilisateur</th>
                     <th>Adresse d'utilisateur</th>
+                    <th>Roles</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -26,6 +27,11 @@
                         <th scope="row">{{ loop.index }}</th>
                         <td>{{ user.username }}</td>
                         <td>{{ user.email }}</td>
+                        <td>
+                            {% for role in user.roles %}
+                            {{ role }}
+                            {% endfor %}
+                        </td>
                         <td>
                             <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
                         </td>
