--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <a href="{{ path('task_create') }}" class="btn btn-info pull-right" >Créer une tâche</a><br>
-    <div class="row" style="margin-top: 20px">
+    <div class="row" style="margin-top: 30px">
         {% for task in tasks %}
         <div class="col-sm-4 col-lg-4 col-md-4">
             <div class="thumbnail">
@@ -17,12 +17,12 @@
                 </div>
                 <div>
                     <form action="{{ path('task_toggle', {'id' : task.id }) }}">
-                        <button class="btn btn-success btn-sm pull-right">
+                        <button class="btn btn-success btn-sm pull-right" style="margin-top : 20px">
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                         </button>
                     </form>
                     <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                        <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
+                        <button class="btn btn-danger btn-sm pull-right" style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">Supprimer</button>
                     </form>
                 </div>
             </div>
