--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h3>Ajouter une tâche</h3>
     <div class="row">
         {{ form_start(form, {'action' : path('task_create')}) }}
         <div class="col-md-6 form">Titre de la tâche</div>
