--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,10 +65,10 @@
         {% endif %}
         {% if app.user %}
             {% for role in app.user.roles %}
-                {% if(role is same as 'ROLE_ADMIN') %}
-                    <a href="{{ path('app_logout') }}" class="pull-right btn btn-info"
+{#                {% if(role is same as 'ROLE_ADMIN') %}#}
+                    <a href="{{ path('app_logout') }}" class="pull-right btn btn-info deconnexion"
                        style="margin-bottom: 50px; margin-left: 20px">Se déconnecter</a>
-                {% endif %}
+{#                {% endif %}#}
             {% endfor %}
             <a href="{{ path('user_list') }}" class="pull-right btn btn-danger" style="margin-bottom: 50px">Espace
                 admin</a>
