--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -37,9 +37,7 @@
                                     {% if user.id == task.author %}
                                         <form action="{{ path('task_delete', {'id' : task.id }) }}">
                                             <button class="btn btn-danger btn-sm pull-right"
-                                                    style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">
-                                                Supprimer
-                                            </button>
+                                                    style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">Supprimer</button>
                                         </form>
                                     {% endif %}
                                 {% else %}
@@ -47,9 +45,7 @@
                                         {% if 'ROLE_ADMIN' in user.roles %}
                                             <form action="{{ path('task_delete', {'id' : task.id }) }}">
                                                 <button class="btn btn-danger btn-sm pull-right"
-                                                        style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">
-                                                    Supprimer
-                                                </button>
+                                                        style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">Supprimer</button>
                                             </form>
                                         {% endif %}
                                     {% endif %}
