--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -33,7 +33,7 @@
                             {% endfor %}
                         </td>
                         <td>
-                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
+                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Modifier</a>
                         </td>
                     </tr>
                 {% endfor %}
