--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,13 +65,13 @@
         {% endif %}
         {% if app.user %}
             {% for role in app.user.roles %}
-{#                {% if(role is same as 'ROLE_ADMIN') %}#}
-                    <a href="{{ path('app_logout') }}" class="pull-right btn btn-info deconnexion"
-                       style="margin-bottom: 50px; margin-left: 20px">Se déconnecter</a>
-{#                {% endif %}#}
+                {% if(role is same as 'ROLE_ADMIN') %}
+                    <a href="{{ path('user_list') }}" class="pull-right btn btn-danger" style="margin-bottom: 50px; margin-left: 20px">Espace
+                        admin</a>
+                {% endif %}
             {% endfor %}
-            <a href="{{ path('user_list') }}" class="pull-right btn btn-danger" style="margin-bottom: 50px">Espace
-                admin</a>
+            <a href="{{ path('app_logout') }}" class="pull-right btn btn-info deconnexion"
+               style="margin-bottom: 50px">Se déconnecter</a>
         {% endif %}
 
         {% if not app.user and 'login' != app.request.attributes.get('_route') %}
