--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -12,10 +12,22 @@
                 <div class="thumbnail">
                     <div class="caption">
                         <h4 class="pull-right">
-                            {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span
-                                    class="glyphicon glyphicon-remove"></span>{% endif %}
+                            {% if task.isDone %}<span class="glyphicon glyphicon-ok" style="color: green"></span>{% else %}<span
+                                    class="glyphicon glyphicon-remove" style="color: red"></span>{% endif %}
                         </h4>
-                        <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
+                        <h4>
+                            {% if user is not null %}
+                                {% if 'ROLE_ADMIN' in user.roles %}
+                                    <a href="{{ path('task_edit', {'id' : task.id }) }}"
+                                       class="titleTaskAdmin">{{ task.title }}</a>
+                                {% elseif 'ROLE_ADMIN' not in user.roles and task.author != 6 and user.id == task.author %}
+                                    <a href="{{ path('task_edit', {'id' : task.id }) }}"
+                                       class="titleTaskUser">{{ task.title }}</a>
+                                {% else %}
+                                    <span>{{ task.title }}</span>
+                                {% endif %}
+                            {% endif %}
+                        </h4>
                         <p>{{ task.content }}</p>
                     </div>
                     <div>
@@ -33,19 +45,21 @@
                         </form>
                         {% if user is defined %}
                             {% if user is not null %}
-                                {% if task.author != 6 %}
-                                    {% if user.id == task.author %}
-                                        <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                                            <button class="btn btn-danger btn-sm pull-right"
-                                                    style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">Supprimer</button>
-                                        </form>
-                                    {% endif %}
+                                {% if task.author != 6 and user.id == task.author %}
+                                    <form action="{{ path('task_delete', {'id' : task.id }) }}">
+                                        <button class="btn btn-danger btn-sm pull-right"
+                                                style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">
+                                            Supprimer
+                                        </button>
+                                    </form>
                                 {% else %}
                                     {% if user is not null %}
                                         {% if 'ROLE_ADMIN' in user.roles %}
                                             <form action="{{ path('task_delete', {'id' : task.id }) }}">
                                                 <button class="btn btn-danger btn-sm pull-right"
-                                                        style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">Supprimer</button>
+                                                        style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">
+                                                    Supprimer
+                                                </button>
                                             </form>
                                         {% endif %}
                                     {% endif %}
