--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,6 +35,6 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit"> Se connecter </button>
+    <button class="btn btn-lg btn-primary" type="submit" style="margin-top: 15px"> Se connecter </button>
 </form>
 {% endblock %}
