--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,22 +23,17 @@
     <!-- Custom CSS -->
     <link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{#    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->#}
+<!--    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"-->
+<!--          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 
 
-    <script src="jquery-3.6.0.min.js"></script>
+{#    <script src="jquery-3.6.0.min.js"></script>#}
 
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/wow.min.js"></script>
+{#    <script src="js/bootstrap.min.js"></script>#}
+{#    <script src="js/wow.min.js"></script>#}
 
-    <![endif]-->
 </head>
 
 <body>
@@ -60,12 +55,6 @@
                 {% if(role is same as 'ROLE_ADMIN') %}
                     <a href="{{ path('user_create') }}" class="btn btn-primary" style="margin-bottom: 50px">Créer un
                         utilisateur</a>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
-        {% if app.user %}
-            {% for role in app.user.roles %}
-                {% if(role is same as 'ROLE_ADMIN') %}
                     <a href="{{ path('user_list') }}" class="pull-right btn btn-danger" style="margin-bottom: 50px; margin-left: 20px">Espace
                         admin</a>
                 {% endif %}
