--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -12,19 +12,22 @@
                 <div class="thumbnail">
                     <div class="caption">
                         <h4 class="pull-right">
-                            {% if task.isDone %}<span class="glyphicon glyphicon-ok" style="color: green"></span>{% else %}<span
+                            {% if task.isDone %}<span class="glyphicon glyphicon-ok"
+                                                      style="color: green"></span>{% else %}<span
                                     class="glyphicon glyphicon-remove" style="color: red"></span>{% endif %}
                         </h4>
                         <h4>
-                            {% if user is not null %}
-                                {% if 'ROLE_ADMIN' in user.roles %}
-                                    <a href="{{ path('task_edit', {'id' : task.id }) }}"
-                                       class="titleTaskAdmin">{{ task.title }}</a>
-                                {% elseif 'ROLE_ADMIN' not in user.roles and task.author != 6 and user.id == task.author %}
-                                    <a href="{{ path('task_edit', {'id' : task.id }) }}"
-                                       class="titleTaskUser">{{ task.title }}</a>
-                                {% else %}
-                                    <span>{{ task.title }}</span>
+                            {% if app.user is defined %}
+                                {% if app.user is not null %}
+                                    {% if 'ROLE_ADMIN' in app.user.roles %}
+                                        <a href="{{ path('task_edit', {'id' : task.id }) }}"
+                                           class="titleTaskAdmin">{{ task.title }}</a>
+                                    {% elseif 'ROLE_ADMIN' not in app.user.roles and task.author != 6 and app.user.id == task.author %}
+                                        <a href="{{ path('task_edit', {'id' : task.id }) }}"
+                                           class="titleTaskUser">{{ task.title }}</a>
+                                    {% else %}
+                                        <span>{{ task.title }}</span>
+                                    {% endif %}
                                 {% endif %}
                             {% endif %}
                         </h4>
@@ -32,7 +35,8 @@
                     </div>
                     <div>
                         <form action="{{ path('task_toggle', {'id' : task.id }) }}">
-                            {% if user is not null %}
+                            {% if app.user is defined %}
+                            {% if app.user is not null %}
                             <button class="btn btn-success btn-sm pull-right"
                                     style="margin-top : 20px;margin-bottom : 20px">
                                 {% if not task.isDone %}
@@ -41,28 +45,26 @@
                                     Marquer non terminée
                                 {% endif %}
                                 {% endif %}
+                                {% endif %}
                             </button>
                         </form>
-                        {% if user is defined %}
-                            {% if user is not null %}
-                                {% if task.author != 6 and user.id == task.author %}
+
+                        {% if app.user is defined %}
+                            {% if app.user is not null %}
+                                {% if 'ROLE_ADMIN' in app.user.roles %}
                                     <form action="{{ path('task_delete', {'id' : task.id }) }}">
                                         <button class="btn btn-danger btn-sm pull-right"
-                                                style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">
+                                                style="margin-bottom : 20px; margin-right : 15px; margin-top : 20px">
                                             Supprimer
                                         </button>
                                     </form>
-                                {% else %}
-                                    {% if user is not null %}
-                                        {% if 'ROLE_ADMIN' in user.roles %}
-                                            <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                                                <button class="btn btn-danger btn-sm pull-right"
-                                                        style="margin-bottom : 50px; margin-right : 15px; margin-top : 20px">
-                                                    Supprimer
-                                                </button>
-                                            </form>
-                                        {% endif %}
-                                    {% endif %}
+                                {% elseif 'ROLE_ADMIN' not in app.user.roles and task.author != 6 and app.user.id == task.author %}
+                                    <form action="{{ path('task_delete', {'id' : task.id }) }}">
+                                        <button class="btn btn-danger btn-sm pull-right"
+                                                style="margin-bottom : 20px; margin-right : 15px; margin-top : 20px">
+                                            Supprimer
+                                        </button>
+                                    </form>
                                 {% endif %}
                             {% endif %}
                         {% endif %}
