--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -35,6 +35,9 @@
                         <td>
                             <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Modifier</a>
                         </td>
+                        <td>
+                            <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-warning btn-sm">Supprimer</a>
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
