Clean code quality

--- a/public/test-coverage/_css/style.css
+++ b/public/test-coverage/_css/style.css
@@ -28,7 +28,7 @@ body {
  margin-bottom: inherit;
 }
 
-.table-borderless th, .table-borderless td {
+.table-borderless td , .table-borderless th{
  border: 0 !important;
 }
 
