--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,7 @@
 
     <!-- Custom CSS -->
     <link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet">
 
 {#    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->#}
 <!--    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
