--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -19,13 +19,14 @@
                                                           style="color: green"></span>{% else %}<span
                                         class="glyphicon glyphicon-remove" style="color: red"></span>{% endif %}
                             </h4>
+
                             <h4>
                                 {% if app.user is defined %}
                                     {% if app.user is not null %}
                                         {% if 'ROLE_ADMIN' in app.user.roles %}
                                             <a href="{{ path('task_edit', {'id' : task.id }) }}"
                                                class="titleTaskAdmin">{{ task.title }}</a>
-                                        {% elseif 'ROLE_ADMIN' not in app.user.roles and task.author != 6 and app.user.id == task.author %}
+                                        {% elseif 'ROLE_ADMIN' not in app.user.roles and task.user != null and app.user.id == task.getUser() %}
                                             <a href="{{ path('task_edit', {'id' : task.id }) }}"
                                                class="titleTaskUser">{{ task.title }}</a>
                                         {% else %}
@@ -61,7 +62,7 @@
                                                 Supprimer
                                             </button>
                                         </form>
-                                    {% elseif 'ROLE_ADMIN' not in app.user.roles and task.author != 6 and app.user.id == task.author %}
+                                    {% elseif 'ROLE_ADMIN' not in app.user.roles and task.user != null and app.user.id == task.getUser() %}
                                         <form action="{{ path('task_delete', {'id' : task.id }) }}">
                                             <button class="btn btn-danger btn-sm pull-right"
                                                     style="margin-bottom : 20px; margin-right : 15px; margin-top : 20px">
