--- a/public/test-coverage/_css/style.css
+++ b/public/test-coverage/_css/style.css
@@ -28,8 +28,8 @@ body {
  margin-bottom: inherit;
 }
 
-.table-borderless td , .table-borderless th{
- border: 0;
+.table-borderless th, .table-borderless td {
+ border: 0 !important;
 }
 
 .table tbody tr.covered-by-large-tests, li.covered-by-large-tests, tr.success, td.success, li.success, span.success {
@@ -58,6 +58,9 @@ body {
 
 td.big {
  width: 117px;
+}
+
+td.small {
 }
 
 td.codeLine {
